--- a/style.css
+++ b/style.css
@@ -5,7 +5,9 @@ body{
     margin: 0;
     padding: 0.3em 0.4em;
     background-color: hsl(30, 38%, 92%);
-    
+    display: flex;
+    align-items: center;
+    min-height: 100vh;
 }
 img{
     max-width: 100%;
@@ -75,13 +77,6 @@ p + p{
     border-radius: 6px;
 }
 @media (min-width : 800px){
-    body{
-        /* border: 1px solid red; */
-        /* margin: auto; */
-        height: 100vh;
-        display: flex;
-        align-items: center;
-    }
     .container{
         display: flex;
     }
